--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "eslint": "^9.35.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "motion": "^11.12.0",
     "react": "^18",
     "react-dom": "^18",
