--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+{
+  "name": "roar-website",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,8 +13,8 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "motion": "^11.12.0",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "split-type": "^0.3.4",
     "tailwind-merge": "^2.5.5"
   },
